# SolartoTr

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish-to-pypi.ymlmain.yml
example/: example.py
src/solartotr/: __init__.py  solartotr.py
