[metadata]
name = solartotr
version = 0.0.1
author = zhushaohz
author_email = zhushaohz@gmail.com
description = Convert a solar gain on human to radiant temperature.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/zhushaohz/SolartoTr
project_urls =
    Bug Tracker = https://github.com/zhushaohz/SolartoTr/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
install_requires =
    time
    math

python_requires = >=3.6

[options.extras_require]

[options.packages.find]
where = src